# ember

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  release-please-config.json  splash.html
.github/workflows/: ci.yml  release.yml
crates/ember-core/src/: error.rs  lib.rs  overlay.rs  project.rs  prompt.rs  providers.rs  retry.rs  selection.rs
docs/: macos-parity.md
docs/superpowers/plans/: 2026-06-30-ember-auto-refine-overhaul.md  2026-07-01-orb-refresh.md
docs/superpowers/specs/: 2026-07-01-orb-refresh-design.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: overlay.json
src-tauri/src/: commands.rs  config.rs  flow.rs  foreground.rs  lib.rs  preview_hook.rs  project.rs  providers.rs  selection.rs
src/components/ui/: select.tsx  tabs.tsx
src/lib/: ipc.ts
src/overlay/: Orb.tsx  Overlay.tsx  Pill.tsx  types.ts  useOrbMotion.ts
src/settings/: HotkeyCapture.tsx  Settings.tsx  UpdateChecker.tsx
src/splash/: Splash.tsx
src/styles/: globals.css
