[package]
name = "ember"
version.workspace = true
description = "Ember: refinador de prompts no momento, em qualquer app."
authors.workspace = true
edition.workspace = true

[lib]
# O sufixo `_lib` evita conflito entre a lib e o bin no Windows (rust-lang/cargo#8519).
name = "ember_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `devtools` expoe o inspetor tambem em release, para o modo debug o poder abrir sob demanda
# (fica atras do toggle `debug_mode`; um utilizador normal nunca o ve). `macos-private-api`
# permite as janelas transparentes no macOS (no-op no Windows, gated internamente).
tauri = { version = "2", features = ["tray-icon", "devtools", "macos-private-api"] }
tauri-plugin-single-instance = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-process = "2"
# Logging estruturado: ficheiro rotativo no log dir (+ stdout em debug). O chao do modo debug
# e das breadcrumbs que antes eram engolidas com `let _ =`.
tauri-plugin-log = "2"
log = "0.4"
ember-core = { path = "../crates/ember-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Resiliencia / providers
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
tokio = { version = "1", features = ["time", "sync", "macros"] }
# Consumir o body de streaming (SSE) como Stream<Item = Bytes>: so o essencial (sem runtime,
# sem executor), a mesma peca que o proprio reqwest usa internamente para bytes_stream().
futures-util = { version = "0.3", default-features = false, features = ["std"] }
# Storage seguro das chaves. O backend nativo e OBRIGATORIO em cada SO: sem ele, o keyring cai
# num mock store que nao persiste nada. Gates por plataforma: Windows Credential Manager em
# Windows, Keychain em macOS. (Linux fica sem backend nativo: o projeto e Windows-first.)
keyring = "3"

# Adapters nativos do loop in-place: enigo (simular Ctrl+C/Ctrl+V),
# arboard (clipboard sincrono, deteta nao-texto).
enigo = "0.3"
arboard = "3"

# Deteta a app em foco (terminal -> Ctrl+Shift+C/V). Versao 0.61 ja esta na arvore.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
] }
keyring = { version = "3", features = ["windows-native"] }

# Bug B: sem o backend `apple-native`, o keyring em macOS usa um mock store e as chaves nao
# persistem na Keychain. (A feature so compila em macOS; em Windows o `windows-native` acima
# e que ativa.)
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

# Auto-update assinado (so desktop: o updater nao suporta mobile).
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
